--- a/res/layout/elemento_fila.xml
+++ b/res/layout/elemento_fila.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/card_background_white"
@@ -8,60 +8,50 @@
 
     <TextView
         android:id="@+id/codigo"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="11dp"
+        android:layout_weight="0.9"
         android:padding="4dp"
         android:text="Codigo"
         android:textSize="20sp" />
 
     <TextView
         android:id="@+id/lugar"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/codigo"
-        android:layout_alignBottom="@+id/codigo"
-        android:layout_toRightOf="@+id/codigo"
+        android:layout_weight="2.2"
         android:ellipsize="end"
-        android:maxLength="12"
+        android:maxLength="11"
         android:padding="4dp"
         android:text="Lugar"
         android:textSize="20sp" />
 
     <TextView
         android:id="@+id/plazas"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/lugar"
-        android:layout_alignBottom="@+id/lugar"
-        android:layout_toRightOf="@+id/lugar"
+        android:layout_weight="0.8"
         android:padding="4dp"
         android:text="Plazas"
         android:textSize="20sp" />
 
     <TextView
         android:id="@+id/ocupadas"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/plazas"
-        android:layout_alignBottom="@+id/plazas"
-        android:layout_toRightOf="@+id/plazas"
+        android:layout_weight="0.8"
         android:padding="4dp"
         android:text="Ocupadas"
         android:textSize="20sp" />
 
     <TextView
         android:id="@+id/estado"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/ocupadas"
-        android:layout_alignBottom="@+id/ocupadas"
-        android:layout_alignParentRight="true"
+        android:layout_weight="1.6"
         android:padding="4dp"
         android:text="Estado"
         android:textColor="@color/White"
         android:textSize="20sp" />
 
-</RelativeLayout>
+</LinearLayout>
