--- a/res/layout/elemento_fila.xml
+++ b/res/layout/elemento_fila.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/card_background_white"
     android:orientation="horizontal"
+    
     android:padding="8dp" >
 
     <TextView
@@ -33,6 +34,8 @@
         android:layout_weight="0.8"
         android:padding="4dp"
         android:text="Plazas"
+        android:layout_gravity="right"
+        android:gravity="right"
         android:textSize="20sp" />
 
     <TextView
@@ -42,6 +45,8 @@
         android:layout_weight="0.8"
         android:padding="4dp"
         android:text="Ocupadas"
+         android:layout_gravity="right"
+         android:gravity="right"
         android:textSize="20sp" />
 
     <TextView
