--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -48,7 +48,8 @@
             android:id="@+id/parkings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:dividerHeight="0dp" >
+            android:dividerHeight="0dp"
+            android:divider="@null" >
         </ListView>
 
     </LinearLayout>
