--- a/res/values-hdpi/styles.xml
+++ b/res/values-hdpi/styles.xml
@@ -1,20 +1,26 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!-- Fila Lista -->
     <style name="Lugar">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">16sp</item>
     </style>
 
     <style name="Cifra">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">15sp</item>
     </style>
 
     <style name="Texto">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">15sp</item>
     </style>
 
     <style name="Estado">
         <item name="android:textStyle">bold</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <!-- Cabecera -->
+    <style name="item_cabecera">
         <item name="android:textSize">14sp</item>
     </style>
 
