--- a/res/layout/activity_portada.xml
+++ b/res/layout/activity_portada.xml
@@ -65,4 +65,13 @@
         android:text="Acceder"
         android:textSize="18sp" />
 
+    <ProgressBar
+        android:id="@+id/carga"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:visibility="gone" />
+
 </RelativeLayout>
