--- a/res/layout/activity_busqueda.xml
+++ b/res/layout/activity_busqueda.xml
@@ -1,80 +1,101 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Busqueda" >
+    android:layout_height="match_parent" >
 
-    <RadioGroup
-        android:id="@+id/radioGroupEstado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+    <!-- The main content view -->
 
-        <RadioButton
-            android:id="@+id/radio0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:button="@drawable/apptheme_btn_radio_holo_light"
-            android:checked="true"
-            android:text="Ir a la UPV" />
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
-        <RadioButton
-            android:id="@+id/radio1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:button="@drawable/apptheme_btn_radio_holo_light"
-            android:text="Volver de la UPV" />
-    </RadioGroup>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin" >
 
-    <AutoCompleteTextView
-        android:id="@+id/origen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/apptheme_edit_text_holo_light"
-        android:completionHint="prueba"
-        android:completionThreshold="4"
-        android:ems="10"
-        android:hint="Origen"
-        android:textSize="20sp" >
+            <RadioGroup
+                android:id="@+id/radioGroupEstado"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
 
-        <requestFocus />
-    </AutoCompleteTextView>
+                <RadioButton
+                    android:id="@+id/radio0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:button="@drawable/apptheme_btn_radio_holo_light"
+                    android:checked="true"
+                    android:text="Ir a la UPV" />
 
-    <AutoCompleteTextView
-        android:id="@+id/destino"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/apptheme_edit_text_holo_light"
-        android:completionHint="prueba"
-        android:completionThreshold="1"
-        android:ems="10"
-        android:hint="Destino"
-        android:textSize="20sp" >
-    </AutoCompleteTextView>
+                <RadioButton
+                    android:id="@+id/radio1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:button="@drawable/apptheme_btn_radio_holo_light"
+                    android:text="Volver de la UPV" />
+            </RadioGroup>
 
-    <EditText
-        android:id="@+id/fecha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/apptheme_edit_text_holo_light"
-        android:cursorVisible="false"
-        android:ems="10"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:hint="Fecha"
-        android:inputType="date"
-        android:textSize="20sp" >
-    </EditText>
+            <AutoCompleteTextView
+                android:id="@+id/origen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/apptheme_edit_text_holo_light"
+                android:completionHint="prueba"
+                android:completionThreshold="4"
+                android:ems="10"
+                android:hint="Origen"
+                android:textSize="20sp" >
 
-</LinearLayout>
+                <requestFocus />
+            </AutoCompleteTextView>
+
+            <AutoCompleteTextView
+                android:id="@+id/destino"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/apptheme_edit_text_holo_light"
+                android:completionHint="prueba"
+                android:completionThreshold="1"
+                android:ems="10"
+                android:hint="Destino"
+                android:textSize="20sp" >
+            </AutoCompleteTextView>
+
+            <EditText
+                android:id="@+id/fecha"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/apptheme_edit_text_holo_light"
+                android:cursorVisible="false"
+                android:ems="10"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:hint="Fecha"
+                android:inputType="date"
+                android:textSize="20sp" >
+            </EditText>
+        </LinearLayout>
+    </FrameLayout>
+    <!-- The navigation drawer -->
+
+    <ListView
+        android:id="@+id/left_drawer"
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/White"
+        android:choiceMode="singleChoice" />
+
+</android.support.v4.widget.DrawerLayout>
