--- a/res/layout/activity_trayectos.xml
+++ b/res/layout/activity_trayectos.xml
@@ -26,6 +26,17 @@
                 android:layout_gravity="center"
                 android:visibility="gone" />
 
+            <TextView
+                android:id="@+id/titulo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Resultados"
+                android:textSize="18sp"
+                android:textStyle="italic"
+                 android:layout_marginBottom="8dp"
+                 />
+
             <ListView
                 android:id="@+id/trayectos"
                 android:layout_width="match_parent"
