--- a/res/layout/activity_busqueda.xml
+++ b/res/layout/activity_busqueda.xml
@@ -18,74 +18,106 @@
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin" >
-            
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.61"
                 android:orientation="vertical" >
 
-            <RadioGroup
-                android:id="@+id/radioGroupmodo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-              
-                >
-
-                <RadioButton
-                    android:id="@+id/radioida"
-                    android:layout_width="wrap_content"
+                <RadioGroup
+                    android:id="@+id/radioGroupmodo"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:button="@drawable/apptheme_btn_radio_holo_light"
-                    android:checked="true"
-                    android:text="Ir a la UPV" />
+                    android:orientation="horizontal"
+                    android:layout_gravity="center" >
 
-                <RadioButton
-                    android:id="@+id/radiovuelta"
-                    android:layout_width="wrap_content"
+                    <RadioButton
+                        android:id="@+id/radioida"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:button="@drawable/apptheme_btn_radio_holo_light"
+                        android:checked="true"
+                        android:text="Ir a la UPV" />
+
+                    <RadioButton
+                        android:id="@+id/radiovuelta"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:button="@drawable/apptheme_btn_radio_holo_light"
+                        android:text="Volver de la UPV" />
+                </RadioGroup>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:button="@drawable/apptheme_btn_radio_holo_light"
-                    android:text="Volver de la UPV" />
-            </RadioGroup>
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal" >
 
-            <AutoCompleteTextView
-                android:id="@+id/origen"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/apptheme_edit_text_holo_light"
-                android:completionThreshold="4"
-                android:ems="10"
-                android:hint="Origen"
-                android:textSize="20sp" >
+                    <ImageView
+                        android:id="@+id/imorigen"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_origen" />
 
-                <requestFocus />
-            </AutoCompleteTextView>
+                    <AutoCompleteTextView
+                        android:id="@+id/origen"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/apptheme_edit_text_holo_light"
+                        android:completionThreshold="4"
+                        android:ems="10"
+                        android:hint="Origen"
+                        android:textSize="20sp" >
 
-            <AutoCompleteTextView
-                android:id="@+id/destino"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="8dp"
-                android:background="@drawable/apptheme_edit_text_holo_light"
-                android:completionThreshold="1"
-                android:ems="10"
-                android:hint="Destino"
-                android:textSize="20sp" >
-            </AutoCompleteTextView>
+                        <requestFocus />
+                    </AutoCompleteTextView>
+                </LinearLayout>
 
-            <Spinner
-                android:id="@+id/spinnerdia"
-                android:background="@drawable/apptheme_spinner_background_holo_light"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                 />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:orientation="horizontal" >
 
-               </LinearLayout>
+                    <ImageView
+                        android:id="@+id/imdestino"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_destino" />
+
+                    <AutoCompleteTextView
+                        android:id="@+id/destino"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/apptheme_edit_text_holo_light"
+                        android:completionThreshold="1"
+                        android:ems="10"
+                        android:hint="Destino"
+                        android:textSize="20sp" >
+                    </AutoCompleteTextView>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:orientation="horizontal" >
+
+                    <ImageView
+                        android:id="@+id/imcalendario"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_calendario" />
+
+                    <Spinner
+                        android:id="@+id/spinnerdia"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/apptheme_spinner_background_holo_light" />
+                </LinearLayout>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
