--- a/res/layout/activity_trayectos.xml
+++ b/res/layout/activity_trayectos.xml
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Resultados"
+                android:text=""
                 android:textSize="18sp"
                 android:textStyle="italic"
                  android:layout_marginBottom="8dp"
