--- a/res/menu/trayectos.xml
+++ b/res/menu/trayectos.xml
@@ -1,9 +1,11 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:id="@+id/action_refresh"
+        android:icon="@drawable/ic_action_navigation_refresh"
+        android:title="Actualizar"
+        app:showAsAction="ifRoom"/>
+
 
 </menu>
