--- a/res/layout/activity_trip_detail.xml
+++ b/res/layout/activity_trip_detail.xml
@@ -29,7 +29,67 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
-                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal"
+                    android:background="@drawable/card_background_white" 
+                   >
+
+                    <ImageView
+                        android:id="@+id/imcalendario"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_calendario" />
+
+                    <TextView
+                        android:id="@+id/fecha"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="Fecha"
+                        android:textSize="25sp"
+                        android:textStyle="bold"  />
+
+                    <TextView
+                        android:id="@+id/precio"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="right"
+                        android:layout_marginRight="8dp"
+                        android:textColor="@color/Orange"
+                        android:text="1€"
+                        android:textSize="35sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+ <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:orientation="vertical"
+                    android:background="@drawable/card_background_white" >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:orientation="horizontal" >
+
+                    <ImageView
+                        android:id="@+id/implazas"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_social_group" />
+
+                    <TextView
+                        android:id="@+id/plazas"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="Plazas"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
                     android:orientation="horizontal" >
 
                     <ImageView
@@ -38,18 +98,13 @@
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_origen" />
 
-                    <AutoCompleteTextView
+                    <TextView
                         android:id="@+id/origen"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/apptheme_edit_text_holo_light"
-                        android:completionThreshold="4"
-                        android:ems="10"
-                        android:hint="Origen"
-                        android:textSize="20sp" >
-
-                        <requestFocus />
-                    </AutoCompleteTextView>
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="Origen"
+                        android:textSize="18sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -64,16 +119,13 @@
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_destino" />
 
-                    <AutoCompleteTextView
+                    <TextView
                         android:id="@+id/destino"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/apptheme_edit_text_holo_light"
-                        android:completionThreshold="1"
-                        android:ems="10"
-                        android:hint="Destino"
-                        android:textSize="20sp" >
-                    </AutoCompleteTextView>
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="Destino"
+                        android:textSize="18sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -83,16 +135,19 @@
                     android:orientation="horizontal" >
 
                     <ImageView
-                        android:id="@+id/imcalendario"
+                        android:id="@+id/imequipaje"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_calendario" />
+                        android:src="@drawable/ic_ic_bag" />
 
-                    <Spinner
-                        android:id="@+id/spinnerdia"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/apptheme_spinner_background_holo_light" />
+                    <TextView
+                        android:id="@+id/equipaje"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="Maleta"
+                        android:textSize="18sp" />
+                </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
 
